--- a/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
+++ b/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
@@ -1212,6 +1212,670 @@ const hello = new Function();
 생성자 함수로 함수를 만드는 방법
 
 ```javascript
-// new Function()
+// new Function(/* 인자1, 인자2, ... , 함수의 바디 */);
+
+console.log(sum(1, 2, 3));  // sum is not defined
+
+const sum = new Function('a', 'b', 'c', 'return a + b + c');
+
+console.log(sum(1, 2, 3));
+
+```
+
+
+
+function 과 new Function();  차이점
+
+```javascript
+{
+    const a = 1;
+    
+    const test = new Function('return a');  // a is not defined
+    
+    console.log(test());
+}
+```
+
+```javascript
+global.a = 0;
+
+{
+    const a = 1;
+    
+    const test = new Function('return a');  // 0
+    
+    console.log(test());
+}
+
+{
+    const a = 2;
+    
+    const test = function() {
+        return a;  // 2
+    };
+    
+    console.log(test());
+}
+
+```
+
+
+
+() => {}
+
+arrow function (es6)
+
+```javascript
+// arrow 함수를 만들어 이름이 hello1 인 변수에 할당
+
+const hello1 = () => {
+    console.log('hello1');
+};
+
+// 함수의 매개변수
+// 함수를 호출할 때 값을 지정
+
+// 매개변수가 하나일 때, 괄호 생략 가능
+
+const hello2 = name => {
+    console.log('hello2', name);
+};
+
+const hello3 = (name, age) => {
+    console.log('hello3', name, age);
+};
+
+// 함수의 리턴
+// 함수를 실행하면 얻어지는 값
+
+const hello4 = name => {
+    return `hello4 ${name}`;
+};
+
+const hello5 = name => `hello5 ${name}`;
+```
+
+
+
+new 함수();
+
+생성자 함수
+
+```javascript
+// 생성자 함수를 이용해서 새로운 객체를 만들어 내는 방법
+
+function Person(name, age) {
+    console.log(this);
+    this.name = name;
+    this.age = age;
+}
+
+const p = new Person('Mark', 37);
+
+console.log(p, p.name, p.age);
+// Person {}
+// Person { name: 'Mark', age: 37} Mark 37
+
+const a = new Person('Anna', 26);
+
+console.log(a, a.name, a.age);
+// Person {}
+// Person { name: 'Anna', age: 26} Anna 26
+
+
+const Cat = (name, age) => {
+    console.log(this);
+    this.name = name;
+    this.age = age;
+}
+// Person {}
+// Person { name: 'Anna', age: 26 } Anna 26
+
+const c = new Cat('냥이', 1);  // Cat is not defined
+```
+
+
+
+함수 안에서 함수를 만들어 리턴
+
+```javascript
+function plus(base) {
+    return function(num) {
+        return base + num;
+    }    
+}
+
+const plus5 = plus(5);
+console.log(plus5(10));  // 15
+
+const plus7 = plus(7);
+console.log(plus7(8));  // 15
+```
+
+
+
+함수를 호출할 때, 인자로 함수를 사용
+
+```javascript
+function hello(c) {
+    console.log('hello');
+    c();
+}
+
+hello(function() {
+    console.log('콜백');
+});  // hello 출력되고 함수는 c자리에 들어가서 실행됨
+// hello
+// 콜백
+```
+
+
+
+클래스
+
+class
+
+객체를 만들 수 있는 새로운 방법 es6 class
+
+```javascript
+// class
+// 선언적 방식
+class A {}
+
+console.log(new A());
+
+// class 표현식을 변수에 할당
+const B = class {};
+
+console.log(new B());
+
+// 선언적 방식이지만 호이스팅은 일어나지 않는다.
+new C();  // C is not defined
+
+class C {}  
+```
+
+
+
+constructor 생성자
+
+```javascript
+// constructor
+
+class A {}
+
+console.log(new A());  // A {}
+
+class B {
+    constructor() {
+        console.log('constructor');
+    }
+}
+
+console.log(new B());
+/*
+constructor
+B {}
+*/
+
+class C {
+    constructor(name, age) {
+        console.log('constructor', name, age);
+    }
+}
+
+console.log(new C('Mark', 37));
+/*
+constructor Mark 37
+C {}
+*/
+console.log(new C());
+/*
+constructor undefined undefined
+C {}
+*/
+```
+
+
+
+멤버 변수
+
+객체의 프로퍼티
+
+```javascript
+// 멤버 변수
+
+class A {
+    constructor(name, age) {
+        this.name = name;
+        this.age = age;
+    }
+}
+
+console.log(new A('Mark', 37));
+// A {name: 'Mark', age: 37}
+
+
+// class field 는 런타임 확인
+
+class B {
+    name;
+    age;
+}
+
+console.log(new B());  // 런타임에러. 문법적 오류.
+```
+
+`nvm use 12.11.1`  <- nvm 사용해서
+
+이렇게 하면
+
+B { name: undefined, age: undefined }
+
+문법이 안될 땐 그 문법 지원하는 상황인지 체크
+
+
+
+```javascript
+class C {
+    name = 'no name';
+	age = 0;
+	
+	constructor(name, age) {
+        this.name = name;
+        this.age = age;
+    }
+}
+
+console.log(new C('Mark', 37));
+// C { name: 'Mark', age: 37 }
+```
+
+
+
+```javascript
+// 멤버 함수
+
+class A {
+    hello1() {
+        console.log('hello1', this);
+    }
+    hello2 = () => {
+        console.log('hello2', this);
+    };
+}
+
+new A().hello1();
+new A().hello2();
+
+/*
+hello1 A { hello2: [Function: hello2] }
+hello2 A { hello2: [Function: hello2] }
+*/
+
+class B {
+    name = 'Mark';
+	
+	hello() {
+        console.log('hello', this.name);
+    }
+}
+
+new B().hello();
+// hello Mark
+```
+
+
+
+get, set
+
+게터, 세터
+
+```javascript
+// get, set
+
+class A {
+    _name = 'no name';
+
+	get name() {
+        return this._name + '@@@';
+    }
+
+	set name(value) {
+        this._name = value + '!!!';
+    }
+}
+
+const a = new A();
+console.log(a);  // A { _name: 'no name' } 
+a.name = 'Mark';  // set 함수가 불림. 인자로 표현식 결과가 들어감.
+console.log(a);  // A { _name: 'Mark!!!' }
+console.log(a.name);  // Mark!!!@@@
+console.log(a._name);  // Mark!!!
+
+
+// readonly
+
+class B {
+    _name = 'no name';
+
+	get name() {
+        return this._name + '@@@';
+    }
+}
+
+const b = new B();
+console.log(b);  // B { _name: 'no name' }
+b.name = 'Mark';
+console.log(b);  // B { _name: 'no name' }
+
+```
+
+
+
+static 변수, 함수
+
+객체가 아니고, 클래스의 변수와 함수
+
+```javascript
+// static 변수, 함수
+
+class A {
+    static age = 37;
+    static hello() {
+        console.log(A.age);
+    }
+}
+
+console.log(A, A.age);  // [Function: A] { age: 37 } 37
+A.hello();  // 37
+
+
+class B {
+    age = 37;
+    static hello() {
+        console.log(this.age);
+    }
+}
+
+console.log(B, B.age);
+B.hello();
+// [Function: B] undefined
+// undefined
+
+// new B().hello();  // hello is not a function. static 함수이므로
+
+class C {
+    static name = '이 클래스의 이름은 C 가 아니다.'
+}
+
+console.log(C);
+// [Function: 이 클래스의 이름은 C 가 아니다.] { name: '이 클래스의 이름은 C가 아니다.' }
+```
+
+
+
+extends
+
+클래스의 상속 기본
+
+```javascript
+// 상속 기본
+
+class Parent {
+    name = 'Lee';
+
+    hello() {
+        console.log('hello', this.name);
+    }
+}
+
+class Child extends Parent {}
+
+const p = new Parent();
+const c = new Child();
+console.log(p, c);
+
+c.hello();  // hello Lee
+c.name = 'Anna';
+c.hello();  // hello Anna
+```
+
+
+
+override
+
+클래스의 상속 멤버 변수 및 함수 오버라이딩, 추가
+
+```javascript
+// 변수, 함수 추가 및 오버라이딩
+
+class Parent {
+    name = 'Lee';
+
+    hello() {
+        console.log('hello', this.name);
+    }
+}
+
+class child extends Parent {
+    age = 37;
+
+    hello() {
+        console.log('hello', this.name, this.age);
+    }
+}
+
+const p = new Parent();
+const c = new child();
+
+console.log(p, c);
+// Parent { name: 'Lee' } child { name: 'Lee', age: 37 } 37 }
+
+c.hello();  // hello Lee 37
+c.name = 'Anna';
+c.hello();  // hello Anna 37
+```
+
+
+
+super
+
+클래스의 상속 생성자 함수 변경
+
+```javascript
+// super
+
+class Parent {
+    name;
+
+    constructor(name) {
+        this.name = name;
+    }
+
+    hello() {
+        console.log('hello', this.name);
+    }
+}
+
+class Child extends Parent {
+    age;
+
+    constructor(name, age) {
+        super(name);
+        this.age = age;
+    }
+
+    hello() {
+        console.log('hello', this.name, this.age);
+    }
+}
+
+const p = new Parent('Mark');
+const c = new Child('Mark', 37);
+
+console.log(p, c);
+// Parent { name: 'Mark' } Child { name: 'Mark', age: 37 }
+c.hello();  // hello Mark 37
+```
+
+
+
+static
+
+클래스의 상속 static 상속
+
+```javascript
+// static 상속
+
+class Parent {
+    static age = 37;
+}
+
+class Child extends Parent {}
+
+console.log(Parent.age, Child.age);
+// 37 37
+```
+
+```
+부모 Class ----new----> 부모 Instance
+   ↓					↓
+자식 Class ----new----> 자식 Instance
+```
+
+
+
+Promise
+
+```javascript
+/*
+ES6 부터 JavaScript 의 표준 내장 객체로 추가
+ES6 를 지원하는 브라우저나 Node.js 에서 전역에 있는 Promise 를 확인 가능
+*/
+
+console.log(Promise);
+// [Function: Promise]
+```
+
+```javascript
+/* 
+생성자를 통해서 프로미스 객체를 만들 수 있다.
+생성자의 인자로 executor 라는 함수를 이용
+*/
+
+new Promise(/* executor */);
+```
+
+```javascript
+/*
+executor 함수는 resolve 와 reject 를 인자로 가진다.
+(resolve, reject) => {...}
+resolve 와 reject 는 함수다.
+resolve(), reject()
+*/
+
+new Promise(/* executor */(resolve, reject) => {});
+```
+
+```javascript
+/*
+생성자를 통해서 프로미스 객체를 만드는 순간 pending (대기) 상태라고 한다.
+*/
+
+new Promise((resolve, reject) => {});  // pending 
+```
+
+```javascript
+/*
+executor 함수 인자 중 하나인 resolve 함수를 실행하면, fulfilled (이행) 상태가 된다.
+*/
+
+new Promise((resolve, reject) => {
+    //
+    // ...
+    resolve();  // fulfilled
+})
+```
+
+```javascript
+/*
+executor 함수 인자 중 하나인 reject 함수를 실행하면, rejected (거부) 상태가 된다.
+*/
+
+new Promise((resolve, reject) => {
+    reject();  // rejected
+});
+```
+
+![image-20191108122050275](./images/image-20191108122050275.png)
+
+```javascript
+/*
+p 라는 프로미스 객체는 1000ms 후에 fulfilled 된다.
+*/
+
+new Promise((resolve, reject) => {
+    /* pending */
+    setTimeout(() => {
+        resolve();  /* fulfilled */
+    }, 1000);
+});
+```
+
+```javascript
+const p = new Promise((resolve, reject) => {
+    /* pending */
+    setTimeout(() => {
+        resolve();  /* fulfilled */
+    }, 1000);
+});
+
+// p.then(/* callback */)
+
+p.then(() => {
+    console.log('1000ms 후에 fulfilled 됩니다');
+});
+```
+
+```javascript
+/*
+then 을 설정하는 시점을 정확히하고,
+함수의 실행과 동시에 프로미스 객체를 만들면서 pending 이 시작하도록 하기 위해
+프로미스 객체를 생성하면서 리턴하는 함수 (p) 를 만들어 함수 (p) 실행과 동시에 then 을 설정한다.
+*/
+function p() {
+    return new Promise((resolve, reject) => {
+        /* pending */
+        setTimeout(() => {
+            resolve();  /* fulfilled */
+        }, 1000);
+    });
+}
+
+p().then(() => {
+    console.log('1000ms 후에 fulfilled 됩니다.');
+});
+```
+
+```javascript
+/*
+마찬가지로 프로미스 객체가 rejected 되는 시점에 p.catch 안에 설정한 callback 함수가 실행된다.
+*/
+function p() {
+    return new Promise((resolve, reject) => {
+        /* pending */
+        setTimeout(() => {
+            reject();  /* rejected */
+        }, 1000);
+    });
+}
+
+p().then(() => {
+    console.log('1000ms 후에 fulfilled 됩니다.');
+}).catch(() => {
+    console.log('1000ms 후에 rejected 됩니다.');
+});
+// 1000ms 후에 rejected 됩니다.
 ```
 
