--- a/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
+++ b/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
@@ -1879,3 +1879,15 @@ p().then(() => {
 // 1000ms 후에 rejected 됩니다.
 ```
 
+...(26)(27)(28)
+
+
+
+async function 과 await (1)
+
+Async - Await
+
+async function 함수이름() {}
+
+const 함수이름 = async () => {}
+
