--- a/Algorithm/lecture/AlgorithmStudy/L07.md
+++ b/Algorithm/lecture/AlgorithmStudy/L07.md
@@ -721,6 +721,30 @@ binary
 mountain
 
 ```c
+#include <stdio.h>
 
+int mountain(int n){
+  
+  if(n == 1){
+    printf("1");
+    return 0;
+  }
+
+  mountain(n-1);
+  printf("%d",n);
+  mountain(n-1);
+  
+  return 0;
+}
+
+int main() {
+  int n;
+  
+  scanf("%d",&n);
+  
+  mountain(n);
+  
+  return 0;
+}
 ```
 
