--- a/Algorithm/lecture/AlgorithmStudy/L18.md
+++ b/Algorithm/lecture/AlgorithmStudy/L18.md
@@ -187,29 +187,198 @@ int main() {
 
 #### 깊이 우선 탐색의 철학
 
+깊이우선탐색 (DFS)
+
+* 깊이우선탐색 (Depth First Search)
+
+  스택(일들 사이 선행관계 존재할 때, 발자취)을 이용하여 그래프를 순회하는 방법
+
+  스택 = 선행관계
+
+  나를 먼저 방문하고 그 다음으로 인접한 노드를 차례로 방문
+
+  단, 방문했던 노드는 방문하지 않는다.
+
 
 
 #### 깊이 우선 탐색의 예제
+
+* 정점과 간선으로 이루어진 자료구조
 
 
 
 #### 깊이 우선 탐색의 퀴즈
 
+![image-20191112143053936](./images/image-20191112143053936.png)
+
+1 -> 2 -> 3 -> 5 -> 6 -> 7 -> 8 -> 9 -> 4 -> 10 -> 11
+
 
 
 #### 깊이 우선 탐색의 전체적 구현
+
+DFS (v, visited) :  // v: 시작점, visited: 방문한 노드 기록
+
+1. v를 방문했다고 처리한다
+2. v와 인접한 모든 w에 대하여 다음을 반복
+3. 만약 w를 아직 방문하지 않았다면,(= 이웃을 아직 방문하지 않았다면)
+4. DFS(w, visited)  // w : 이웃
+5. 방문순서 반환
+
+DFS 는 재귀를 이용
+
+재귀함수 -> 스택 사용
 
 
 
 #### 깊이 우선 탐색의 자세한 과정
 
+```c
+// graph 라는 그래프를 x 부터 시작해서 DFS 하라 (단, visited 는 방문 기록)
+void DFS(Graph graph, int x, bool visited[]) {
+    visited[x] = true;  // 방문했다 (false = 방문 아직 안했다)
+    
+    for(int i=0; i<graph[x].size(); i++) {
+        int y = graph[x][i];
+        
+        if(visited[y] == false) {
+            DFS(graph, y, visited);  // graph 라는 그래프를 y 부터 시작해서 DFS 하라
+        }
+    }
+}
+```
+
+![image-20191112144956675](./images/image-20191112144956675.png)
+
+DFS(graph, 1, visited)  // visited = [F, T, F, F, F, F, F, F]  // i=0  y=2
+
+DFS(graph, 2, visited)  // visited = [F, T, T, F, F, F, F, F]  // i=1  y=3  // 각각이 하던 일을 잠시 멈추고 기다리고 있는 상태  //  i=2  y=4  // DFS(graph, 1, visited) 로 돌아감
+
+DFS(graph, 3, visited)  // visited = [F, T, T, T, F, F, F, F]  // i=1  y=5   -- DFS(graph, 5, visited) 끝나고 --> i=2  y=6  //  DFS(graph, 2, visited) 로 돌아감
+
+DFS(graph, 5, visited)  // visited = [F, T, T, T, F, T, F, F]  // i=1    <- 이게 끝나면 DFS(graph, 3, visited) 로 돌아감
+
+DFS(graph, 6, visited)  // visited = [F, T, T, T, F, T, T, F]  // i=1  y=7  // 할 일 다 하고 DFS(graph, 3, visited) 로 돌아감
+
+DFS(graph, 7, visited)  // visited = [F, T, T, T, F, T, T, T]  // 할일 다 하고 DFS(graph, 6, visited) 로 돌아감
+
+DFS(graph, 4, visited)  // visited = [F, T, T, T, T, T, T, T]  // 할 수 있는거 다 했으니 DFS(graph, 2, visited) 로 돌아감
+
+
+
+1 -> 2 -> 3 -> 5 -> 6 -> 7 -> 4
+
 
 
 #### 깊이 우선 탐색의 구현
 
+```c
+// 깊이우선탐색 (DFS)
+
+//    1 ----- 2 ------- 6
+//     \     / \       /
+//      \   /   4 --- 5
+//       \ /   / \
+//        3 - 7 - 8 - 9
+
+//  1 -> 2 -> 3 -> 7 -> 4 -> 5 -> 6 -> 8 -> 9
+
+  // 9 12
+  // 1 2
+  // 1 3
+  // 2 3
+  // 2 4
+  // 2 6
+  // 3 7
+  // 4 5
+  // 4 7
+  // 4 8
+  // 5 6
+  // 7 8
+  // 8 9
+
+#include <stdio.h>
+#include <vector>
+
+using namespace std;
+
+const int MAX = 100;
+
+// global variable
+
+int n, m;
+vector <int> myGraph[MAX];  // myGraph[x] = x의 인접 리스트
+bool visited[MAX];
+
+void DFS(int x) {
+  // x 부터 시작해서 DFS 하여 그 순서를 출력하는 함수.
+  // 단, visited에 방문 기록이 있음.
+  
+  visited[x] = true;
+  printf("%d ", x);
+  
+  /*
+    (1) ---- (2) --- (5) --- (6) -- (7)
+     |\____ (3) __ (8) __ (9)
+     \_____ (4) __ (10)
+  
+  */
+  
+  // myGraph[x] <- [1, 3, 4]
+  
+  for(int i=0; i<myGraph[x].size(); i++) {
+    int y = myGraph[x][i];
+    // x 와 y 가 연결이 되어 있다.
+    
+    if(visited[y] == false) {  // 너 방문 안했네
+      DFS(y);  // 너 방문해 난 자고있을께 -> DFS(y) 가 일 다 끝나고 다시 돌아와서 깨보면 색칠상태 업데이트 되어있음
+    }
+  }
+}
+
+int main() {
+  
+  scanf("%d %d", &n, &m);
+  
+  for(int i=0; i<m; i++) {
+    int a, b;
+    
+    scanf("%d %d", &a, &b);  // a--b
+    
+    myGraph[a].push_back(b);
+    myGraph[b].push_back(a);
+  }
+  
+  DFS(1);  // 1 부터 시작해서 DFS 한 결과를 출력
+  
+  printf("\n");
+  
+  return 0;
+}
+```
+
 
 
 #### 깊이 우선 탐색의 정확성과 시간복잡도
+
+DFS의 정확성 증면 / 시간복잡도
+
+* 정확성 증명 - DFS 가 정말 순회를 하는가 (순회를 한다 : 정점을 모두 방문했다.)
+
+  모든 정점을 방문한다.
+
+  하나의 정점을 두번 이상 방문하지 않는다.
+
+1. 나 방문
+2. 모든 이웃에게 물어봄
+
+`|V| = 2 * |E|`
+
+* 시간복잡도
+
+  각 정점은 1번씩, 각 간선은 2번씩 방문함
+
+  O(V+E)
 
 
 
