--- a/Algorithm/lecture/AlgorithmStudy/L12.md
+++ b/Algorithm/lecture/AlgorithmStudy/L12.md
@@ -394,9 +394,25 @@ int main() {
 
 
 
-#### 전염병
+#### 전염병 - 재평이가 풀어줌
 
 ```python
+n, k = map(int, input().split())
 
+infected = [k]
+
+visited = [0] * (n+1)
+visited[k] = 1
+
+while infected:
+  cur = infected.pop(0)
+  next_intfect = [cur * 2, cur //3]
+  
+  for ni in next_intfect:
+    if 1 <= ni <= n and not visited[ni]:
+      infected.append(ni)
+      visited[ni] = 1
+
+print(n - sum(visited))
 ```
 
