--- a/Algorithm/lecture/AlgorithmStudy/L19.md
+++ b/Algorithm/lecture/AlgorithmStudy/L19.md
@@ -208,7 +208,31 @@ int main() {
 #### 웜바이러스
 
 ```c
+computer = int(input())
+network = int(input())
 
+computer_network = [[0 for _ in range(computer + 1)] for _ in range(computer + 1)]
+
+for _ in range(network):
+  x, y = map(int, input().split())
+  computer_network[x][y] = 1
+  computer_network[y][x] = 1
+
+def bfs(computer_network, start):
+  queue = [start]
+  visited = []
+  
+  while queue:
+    temp = queue.pop(0)
+    visited.append(temp)
+    
+    for i in range(len(computer_network)):
+      if (computer_network[temp][i] == 1) and (i not in visited) and (i not in queue):
+        queue.append(i)
+    
+  print(len(visited)-1)
+      
+bfs(computer_network, 1)
 ```
 
 
