단지번호붙이기 DFS

--- a/Algorithm/lecture/AlgorithmStudy/L18.md
+++ b/Algorithm/lecture/AlgorithmStudy/L18.md
@@ -400,5 +400,44 @@ DFS의 정확성 증면 / 시간복잡도
 
 #### 단지번호붙이기
 
+```python
+n = int(input())
+
+# zido = []
+# for i in range(n):
+#   temp = list(map(int, input()))
+#   zido.append(temp)
+
+zido = [list(map(int, input())) for i in range (n)]
+
+dx = [-1, 0, 1, 0]
+dy = [0, 1, 0, -1]
+lst = []
+
+def dfs(x, y):
+  global count
+  count += 1
+  zido[x][y] = 0
+  for i in range(4):
+    X = x + dx[i]
+    Y = y + dy[i]
+    if X<0 or Y<0 or X>=n or Y>=n:
+      continue
+    if zido[X][Y] == 1:
+      dfs(X, Y)
+
+for i in range(n):
+  for j in range(n):
+    if zido[i][j] == 1:
+      count = 0
+      dfs(i, j)
+      lst.append(count)
+
+print(len(lst))
+lst.sort()
+for i in lst:
+  print(i)
+```
+
 
 
