--- a/Algorithm/lecture/AlgorithmStudy/L18.md
+++ b/Algorithm/lecture/AlgorithmStudy/L18.md
@@ -384,6 +384,50 @@ DFS의 정확성 증면 / 시간복잡도
 
 #### 깊이우선탐색과 너비우선탐색
 
+```python
+n, m = map(int, input().split())
+g = [[] for _ in range(n)]  # 빈 2차원 리스트
+
+for i in range(m):
+  a, b = map(int, input().split())
+  g[a].append(b)
+  g[b].append(a)
+  
+for i in g:
+  i.sort()
+
+
+dfs_visited = [0] * n
+
+def dfs(x):
+  dfs_visited[x] = 1
+  print(x, end=' ')
+  
+  for next_vertex in g[x]:
+    if dfs_visited[next_vertex] == 0:
+      dfs(next_vertex)
+
+
+bfs_visited = [0] * n
+
+def bfs(x):
+  next_vertexes = []
+  next_vertexes.append(x)
+  while next_vertexes:  # next_vertexes 가 존재할 때
+    next_vertex = next_vertexes.pop(0)  # next_vertexes 중 첫번째 값
+    if bfs_visited[next_vertex]==0:  # 아직 방문하지 않았다면
+      bfs_visited[next_vertex] = 1  # 방문처리
+      print(next_vertex, end=' ')
+      for v in g[next_vertex]:
+        if not bfs_visited[v]:  # 연결된 정점들 중 방문하지 않은 정점들을
+          next_vertexes.append(v)  # next_vertexes 에 추가
+          
+
+dfs(0)
+print()
+bfs(0)
+```
+
 
 
 #### 2색칠하기
