--- a/memo/20191119.md
+++ b/memo/20191119.md
@@ -13,3 +13,28 @@ PAY LOAD 돈 내고 싣다 <- 정보 그 자체.  핵심 데이터
 your-256-bit-secret 에 
 
 SECRET_KEY 들어감
+
+
+
+venv
+
+`django-admin startapp todos`
+
+`django-admin startapp accounts`
+
+`python manage.py makemigrations`
+
+`python manage.py migrate`
+
+`python manage.py createsuperuser`
+
+ http://127.0.0.1:8000/api-token-auth/ 
+
+![image-20191119104832745](./images/image-20191119104832745.png)
+
+
+
+jwt.io
+
+![image-20191119105225113](./images/image-20191119105225113.png)
+
