--- a/Algorithm/lecture/AlgorithmStudy/L11.md
+++ b/Algorithm/lecture/AlgorithmStudy/L11.md
@@ -203,13 +203,88 @@ int a[10];
 
 #### 구조체의 개념
 
+구조체(struct) : 캡슐화의 구현
 
+* 구조체는 하나의 Black box를 구현할 때 사용한다
+
+* Type(int, char, double)을 정의함
+
+  ```c
+  struct Point {
+      int x;  // 멤버 변수
+      int y;
+      
+      int getSum() {  // 함수(메소드)
+          return x+y;
+      }
+  };
+  ```
+
+  ```c
+  int main() {
+      Point p;  // Type
+      
+      p.x = 1;
+      p.y = 2;
+      
+      printf("%d\n", p.getSum());
+      
+      return 0;
+  }
+  ```
+
+  
 
 #### 구조체의 구현
+
+```c
+#include <stdio.h>
+
+// Point 라는 타입을 정의할 것이다.
+
+// struct main 안에 써도 됨
+struct Point {
+  int x;
+  int y;
+  
+  int getSum() {
+    return x+y;
+  }
+};
+
+int main() {
+  Point p1, p2;
+  
+  p1.x = 1;
+  p1.y = 2;
+  
+  p2.x = 3;
+  p2.y = 4;
+  
+  printf("%d\n", p1.getSum());
+  printf("%d\n", p2.getSum());
+
+  return 0;
+}
+```
+
+main 안에서는 getSum이 어떻게 동작하는지 알 필요가 없음
 
 
 
 #### 최대값 기계1
+
+* 다음과 같은 일을 하는 최댓값 기계를 구현하라
+
+  M이 최댓값 기계라고 하자.
+
+  M.insertNumber(x)  : 숫자 x를 M에 넣는다.
+
+  M.removeNumber(x) : 숫자 x를 M에서 제거한다.
+
+  M.getMax() : M에 들어있는 숫자 중 최댓값을 반환한다.
+
+  
 
 
 
