--- a/Study/LearningJavaScript/02_javaScriptDevTools/20200117.md
+++ b/Study/LearningJavaScript/02_javaScriptDevTools/20200117.md
@@ -5,3 +5,12 @@
 * 걸프Gulp : 반복적인 개발 작업을 자동화하는 빌드 도구. 그런트Grunt 도 널리 쓰임
 * 바벨Babel : ES6 코드를 ES5 코드로 변환하는 트랜스컴파일러
 * ES린트ESLint : 자주 하는 실수를 피하고 더 나은 프로그래머가 되도록 돕는 린트 프로그램
+
+자바스크립트 <= 컴파일과 링크가 필요 없는 인터프리팅 언어
+
+브라우저 스크립트 언어의 표준
+
+노드의 등장으로 브라우저 바깥으로 영역을 확대
+
+책 예제는 파이어폭스, ES6 피들(http://www.es6fiddle.net/) 에서 동작
+
