--- a/Study/Book/교양/프로그래머_첫걸음/05_훌륭한_프로그래머가_되는_방법.md
+++ b/Study/Book/교양/프로그래머_첫걸음/05_훌륭한_프로그래머가_되는_방법.md
@@ -114,3 +114,144 @@ cf) <실용주의 프로그래머> -앤디 헌트, 데이브 토마스-
   유명한 프로그래머들은 테스트하지 않은 코드는 깨진 코드라고 표현한다.
 
   https://docs.python.org/3/library/unittest.html 에서 파이썬의 unittest 모듈 사용법
+  
+* 코드 리뷰
+
+  코드 리뷰는 다른 사람이 당신의 코드를 읽고 피드백을 주는 것
+
+  코드 리뷰는 가능한한 많이 해야 하고, 독학하는 프로그래머라면 특히 더 많이 해야 함. 코드 읽어 보고 고칠 점 지적해 줄 경험 많은 사람 필요.
+
+  코드 리뷰Code Review는 프로그래머 커뮤니티에 코드 리뷰를 요청하는 사이트.
+
+  스택 익스체인지Stack Exchange
+
+  http://codereview.stackexchange.com/
+
+* 보안
+
+  독학하는 프로그래머들은 보안을 무시하기 쉬운데, 면접에서 보안 관련 질문을 하는 경우가 많지 않고, 프로그래밍을 배우면서 만드는 프로그램에서는 보안이 중요하지 않다.
+
+  하지만 프로그래밍 관련 직업을 얻는 순간부터, 만든 코드의 보안에 책임을 져야 한다.
+
+  sudo를 사용해 루트 사용자 권한으로 명령을 내리는 법을 배웠는데, 꼭 필요한 경우가 아니라면 sudo를 써서 프로그램을 실행하지 말자.
+
+  해커가 그 프로그램을 만들었다면 시스템의 루트 사용자 권한을 얻게 된다. 서버를 관리하고 있다면 루트 로그인을 비활성화해야 한다.
+
+  해커는 루트 계정이 있다는 사실을 알고 있고, 루트 로그인을 시도할 것이다.
+
+  사용자가 입력한 내용은 모두 악의적이라고 간주하고 그에 맞게 프로그램을 만들자. 프로그램이 사용자의 입력을 받는다면 공격 대상이 될 가능성이 높다. 
+
+  프로그램을 안전하게 관리하는 다른 전략은 공격 지점attack surface을 최소화하는 것이다. 공격 지점이란 공격자가 데이터를 빼내거나 시스템에 침투할 수 있는 지점이다. 공격 지점을 가능한 한 작게 유지하면 그만큼 공격에 노출될 가능성도 낮아진다. 공격 지점을 최소화하는 방법의 예 => 기밀 정보를 꼭 저장해야 하는 경우가 아니라면 저장하지 않기, 사용자에게 최소한의 권한만 주기, 타사 라이브러리 사용을 최소화, 더는 사용하지 않는 기능 제거(코드가 적으면 공격 가능성도 적다)
+
+  루트 사용자로 로그인하지 않고 사용자가 입력한 내용을 믿지 않으면 공격 지점을 최소화하는 것은 프로그램의 보안을 유지하는 중요한 기초이기는 하지만, 그것이 전부는 아니고 항상 내가 해커라면 어떻게 할까, 취약점을 찾았을 때 어떻게 공격할까 등과 같이 생각하는 버릇을 들이면 간과하기 쉬운 약점을 찾아내는 데 도움이 된다. 항상 보안에 신경 쓰면서 계속 공부
+
+  "보안은 마음가짐이다" - 브루스 슈나이어bruce schneier-
+
+```용어 해설
+* 실무 코드 : 다른 사람이 사용하도록 배포하는 코드
+* DRY 같은 일을 반복하지 말라는 프로그래밍 원칙
+* 독립성 : "컴퓨터 공학에서 독립성이란 일종의 디커플링을 의미한다. 두 개 이상의 개체가 있고, 그중 하나를 변경했을 때 다른 개체에 영향이 없다면 그들은 서로 독립적이다. 시스템을 잘 설계했따면 데이터베이스 코드와 사용자 인터페이스는 서로 독립적일 것이다. 인터페이스를 변경해도 데이터베이스에는 아무 영향이 없고, 데이터베이스를 교체하더라도 인터페이스에는 아무 영향이 없다."
+* 디버거 : 코드 실행을 잠시 멈추고 행 단위로 이동하면서, 변수가 이 부분에서는 이런 값이었고 저 부분에서는 저런 값이었다는 것을 확인하는 프로그램
+* 로그 : 프로그램을 실행하는 동안 데이터를 기록하는 것
+* 테스트 : 설계와 개발의 기준이 된 요건을 만족하는지, 모든 종류의 입력에 정확히 반응하는지, 납득할 수 있는 시간 안에 기능을 수행하는지, 충분히 사용하기 쉬운지, 의도한 환경에 설치하고 실행할 수 있는지, 이해 관계자들이 원하는 결과를 내는지 확인하는 프로그램
+* 코드 리뷰 : 다른 사람이 당신의 코드를 읽고 피드백을 주는 일
+* 공격 지점 : 공격자가 데이터를 빼내거나 시스템에 침투할 수 있는 지점
+```
+
+
+
+### 프로그래머가 되려면
+
+"현실"이라는 표현에 주의하라. 당신의 대화 상대가 '현실적'이라는 표현을 쓰다면, 이는 대부분 자신의 암묵적인 가정에 도전하지 말라는 뜻이다. -에츠허르 W.데이크스트리edsger w.dijkstra-
+
+일단 첫 직장을 갖고 거기서 경험을 좀 쌓는다면, 다음 직장을 구하는 것은 상당히 쉽다. 모집자들이 먼저 연락을 해서.
+
+* 진로를 정하자
+
+  프로그래밍 직업을 구할 떄는 보통 원하는 분야에 따라 특정 기술을 가진 전문가가 되는 것이 유리하다. 프로그래밍을 공부할 떄는 만능 프로그래머(뭐든 조금씩 다 할 줄 아는 사람)여도 상관없지만, 가장 좋아하는 분야에 집중해서 전문가가 되는 편이 유리하다. 특정 분야에 집중하면 직업을 구하기가 쉬워진다.
+
+  최근 가장 인기 있는 분야는 웹, 모바일. 
+
+  이 분야는 크게 프론트엔드와 백엔드로 나뉘는데, 애플리케이션의 프론트엔드는 웹 앱의 GUI처럼 눈에 보이는 부분, 백엔드는 눈에 보이지 않으며 프론트엔드에 데이터를 공급하는 부분이다. '파이썬 백엔드 프로그래머 모집'이라는 구인 광고가 있다면 웹 사이트 백엔드 프로그래밍을 담당할, 파이썬에 익숙한 프로그래머를 구한다는 뜻이다. 구인 광고에는 항상 어떤 기술의 전문가를 구하는지, 그 외 다른 기술이 필요한지 나와 있다.
+
+  프론트엔드 / 백엔드만 담당하는 팀 구분하지 않고, 프론트엔드와 백엔드 모두 가능한 풀스택 개발자를 구하는 회사도 있다.(웹 사이트 / 웹 앱을 개발하는 회사에만 의미가 있음)
+
+  보안, 플랫폼 공학, 데이터 과학 등 구인/구직 사이트의 직업 설명을 읽어 보면 프로그래밍 구인자들이 어떤 기술을 가진 사람을 원하는지 알 수 있다.
+
+  https://www.python.org/jobs 의 파이썬 직업 게시판 읽어 보고 관심 가는 직업을 몇 가지 골라 구인 조건, 구인자가 원하는 프로그래밍 기술을 읽어 보면 원하는 분야에서 경쟁력을 갖추기 위해 어떻게 해야 하는지 알 수 있을 것
+
+* 초기 경험 쌓기
+
+  프로그래밍 직업 구하려면 먼저 경험이 있어야 하는데, 아직 직장이 없어도 깃허브에 수천 개씩 있는 오픈 소스 프로젝트에 이바지하거나, 직접 오픈 소스 프로젝트를 시작해서 경험을 쌓을 수 있다.
+
+  프리랜서로 일해 보는 것도 한 가지 방법인데, 업워크Upwork 같은 사이트에 프로필을 올리고, 작은 프로그래밍 일거리부터 지원해 보자.
+
+  프로그래밍 관련 일감을 가진 사람을 알고 있다면, 업워크에 가입한 후 당신을 고용하라고 부탁. 그러면 그 사람이 당신에 대해 좋은 평가를 남길 기회가 생긴다. 업워크 같은 사이트에 좋은 평가가 하나도 없다면 일자리를 구하기가 쉽지 않다.
+
+  반대로, 일단 작은 일 하나라도 성공적으로 끝냈다는 객관적 평가가 있으면 신용을 얻을 수 있으므로 일자리를 구하기도 쉬워짐.
+
+* 면접 응시하기
+
+  오픈 소스나 프리랜서 일을 통해 경험을 쌓았다면 이제 면접을 볼 차례인데, 링크드인LinkedIn
+
+  링크드인 계정을 만들고 고용해 줄 수 있는 사람들과 관계를 넓히자.
+
+  프로필에는 당신이 어떤 프로그래밍 기술을 공부했는지 꼭 강조해야 한다. 예를 들어 링크드인에 가입한 사람들 중 대다수가 프로필 맨 위에 '프로그래밍 언어: 파이썬, 자바스크립트' 같은 요약을 남기는데 그러면 모집자가 파이썬이나 자바스크립트 관련 프로그래머를 검색할 때 노출될 수 있다. 최근 했던 오픈 소스 프로젝트나 프리랜서 일거리를 이력에 남기자.
+
+  프로필을 다 쓰고 모집자를 초대해서, 수락하면 지금 사람을 구하는 자리가 있는지 물어본다.
+
+* 면접
+
+  모집자가 사람을 구하는 자리에 당신이 적합하다고 판단하면, 링크드인에서 전화 면접을 수락하라는 메시지를 보낼 것이다. 모집자와 대화할 때 보통 기술적인 대화는 잘 하지 않지만, 필자는 몇 가지 기술 문제의 답을 외워 두었다가 첫 면접에서 물어보는 모집자를 만났다.
+
+  보통 첫 면접의 대화 주제는 당신이 배운 기술, 이전의 경험, 회사 분위기에 적응할 수 있는가에 관한 것이다.
+
+  첫 번째 면접을 잘 넘기면 두 번째 면접으로 넘어가는데, 두 번째 면접에서는 보통 당신이 함께 일할 팀원들과 대화하게 된다. 아마 그들도 첫 번째 면접과 비슷한 질문을 할 것이다. 하지만 이번에는 기술 테스트가 포함된다. 보통 웹 사이트에 프로그래밍 질문을 올려놓은 다음, 당신에게 주소를 알려주고 풀어보라고 하는 경우가 많다.
+
+  두 번째 면접을 잘 넘긴다면 마지막 면접을 한 번 더 보게 되는데, 세 번째 면접은 일반적으로 회사 사무실에 방문해서 사람을 직접 만나는 면접이다. 전화 면접과 마찬가지로 다양한 팀원들을 만나게 된다. 당신이 배운 기술과 경험에 관한 질문을 받고, 몇 가지 테스트를 더 통과해야 한다. 때로는 점심 식사를 같이 하면서 사교성이 좋은지 보는 회사도 있다.
+
+  세 번째 면접에는 유명한 화이트보드 테스트도 등장하는데, 지원한 회사에서 화이트보드 테스트를 한다면, 미리 화이트보드를 하나 사서 연습하기를 권장한다. 컴퓨터에서 프로그래밍 문제를 푸는 것보다 화이트보드에서 푸는 것이 훨씬 어려우므로 미리 연습 해 두면 도움됨.
+
+* 컨닝
+
+  프로그래밍 면접의 질문은 크게 두 가지, 즉 자료구조와 알고리즘에 관한 것이 대부분이다. 프로그래밍 면접을 통과하려면 자료구조와 알고리즘에 대해 아주 잘 알고 있어야 한다. 다행히 자료구조와 알고리즘에 대해 공부하는 것이 헛수고는 아니다. 훌륭한 프로그래머가 되려면 필수적으로 익혀야 하는 지식이다.
+
+  면접관의 관점에서 생각해 보면, 면접을 준비할 때 어디에 집중해야 할지 범위를 더 좁혀서 생각할 수 있다. 
+
+  면접관들은 소프트웨어 개발은 끝이 없는 일이라고 생각할 것이고, 사실 그렇기도 하다. 면접관은 분명 할 일이 아주 많은 바쁜 사람일 테고, 면접에 시간을 많이 할애할 수 없어서 '프로그래밍 면접 질문'에 관해 검색해 본 후, 검색 결과의 처음 한두 페이지 안에 있는 질문을 할 것이어서 결국 똑같은 면접 질문이 몇 번이나 반복되는 상황이 되고, 당신도 인터넷에서 그 질문을 찾아 연습할 수 있다.
+
+  리트코드LeetCode <- 면접을 보면서 받았던 질문은 전부 리트코드에서 찾을 수 있었다.
+
+### 팀에서 일하기
+
+"훌륭한 소프트웨어는 훌륭한 팀에서만 나온다. 그런데 대부분의 소프트웨어 팀은 마치 심각한 가정 불화에 빠진 가족처럼 행동한다." -짐 맥카시Jim mccarthy-
+
+독학으로 프로그램을 배웠다면 혼자서 프로그래밍하는 데 익숙할 것이다. 하지만 회사에 들어가면 팀에서 일하는 법을 배워야 한다.
+
+직접 회사를 차리더라도, 언젠가는 다른 프로그래머를 고용해야 할 테고 그러면 그 사람과 같은 팀으로 일하는 법을 배워야 한다.
+
+프로그래밍은 여러 사람이 함께하는 일이다. 여러 사람이 하는 일이 모두 그렇듯, 프로그래밍에서도 동료들과 잘 어울려야 한다.
+
+* 기본을 마스터하자
+
+  회사에 입사했다면, 동료들은 당신이 이 책에서 설명하는 내용 정도는 충분히 이해하고 있을 것이라고 생각한다. 책을 읽은 것 이상으로 개념 자체를 완전히 자기 것으로 만들자. 기본적인 것을 계속 도와줘야 한다면, 동료들 화 남
+
+* 검색할 수 있는 것을 묻지 말자
+
+  프로그래밍을 독학으로 배웠다가 팀에 새로 들어간다면 배워야 할 것도 많고 질문할 것도 많을 것이다. 물론 질문은 훌륭한 학습 방법이지만, 질문도 잘 해야 한다. 최소한 5분 이상은 검색해 본 다음 질문하자. 스스로 쉽게 답을 찾을 수 있는 것을 너무 자주 물어보면 동료들 짜증남
+
+* 코드 변경
+
+  팀 동료 모두가 더 좋은 프로그래머가 되려는 열정을 가진 것은 아니다. 계속 공부하려는 열정이 없거나 그저 일이 진행되는 것만으로 만족하는 사람도 많다.
+
+  특히 스타트업에서는 품질 높은 코드를 만드는 것보다 빨리 만드는 것이 더 중요하므로, 수준 낮은 코드를 만들 때가 많다. 만약 당신이 이런 상황에 처했다면 행동에 주의해야 한다. 다른 사람의 코드를 수정하면 그 사람의 자존심을 상하게 할 수도 있다. 더 나쁜 것은, 다른 사람의 코드를 수정하는 데 시간을 너무 많이 소비하다 보면 새 프로젝트에 이바지할 시간이 부족해지고, 열심히 일하지 않는 것으로 보일 수도 있다.
+
+  이런 상황에 처하지 않으려면 처음에 면접을 볼 때 회사 문화를 주의 깊게 살펴야 한다. 이런 상황이 계속 발생한다면, 에드워드 요든Edward Yourdon의 충고 "경영진이 자신의 일을 파악하지 못하고 있거나, 스스로 부끄러울 정도의 저품질 소프트웨어 쓰레기를 만드는 회사라면 퇴사하는 것이 낫다"
+
+* 가면 증후군imposter syndrome
+
+  프로그램을 만드는 사람은 누구나 때때로 무기력해지고, 아무리 열심히 노력해도 알 수 없는 일이 있다고 생각하고 한다. 독학하는 프로그래머라면 특히 들어본 적도 없는 일을 부탁받거나, 컴퓨터 분야에서 아직 모르는 것이 너무나 많다는 생각에 '나는 이곳에 어울리지 않는다'는 식의 자괴감에 빠지기 쉬운데 이런 일은 누구에게나 일어난다.
+
+  회사에 입사, 그 자리에서 일하고 있다는 것 자체가 스스로 노력했다는 증거. 뭐든 다 알 필요는 없으며, 그런 사람도 없고, 겸손한 자세로 모르는 것이 있다면 계속 공부, 계속 나아질 수 있을 것이다.
+
+  * 가면 증후군은 '나는 자격이 없는데 주변 사람들을 속여서 이 자리에 오게 됐다'고 생각하는 불안 심리를 말한다. 상담에 참여한 사람들이 '나는 자격이 없다. 언젠가는 이 가면이 벗겨져 정체가 드러날 것이다.' 라고 얘기한 데서 이런 표현이 나왔다고 한다.
