--- a/Study/Book/교양/프로그래머_첫걸음/05_훌륭한_프로그래머가_되는_방법.md
+++ b/Study/Book/교양/프로그래머_첫걸음/05_훌륭한_프로그래머가_되는_방법.md
@@ -255,3 +255,88 @@ cf) <실용주의 프로그래머> -앤디 헌트, 데이브 토마스-
   회사에 입사, 그 자리에서 일하고 있다는 것 자체가 스스로 노력했다는 증거. 뭐든 다 알 필요는 없으며, 그런 사람도 없고, 겸손한 자세로 모르는 것이 있다면 계속 공부, 계속 나아질 수 있을 것이다.
 
   * 가면 증후군은 '나는 자격이 없는데 주변 사람들을 속여서 이 자리에 오게 됐다'고 생각하는 불안 심리를 말한다. 상담에 참여한 사람들이 '나는 자격이 없다. 언젠가는 이 가면이 벗겨져 정체가 드러날 것이다.' 라고 얘기한 데서 이런 표현이 나왔다고 한다.
+
+### 더 배울 것들
+
+"최고의 프로그래머는 조금 더 나은 것이 아니다. 창의력, 스피드, 설계 능력, 문제해결 능력까지 그들은 어떤 기준에서든 보통 사람보다 한 자릿수 이상 더 낫다." -랜덜 E.스트로스randall e.stross-
+
+데이비드 비토David Byttow의 글 <ABC: Always Be Coding>에는 소프트웨어 전문가로 성공하는 훌륭한 조언이 들어 있다. 제목 그대로, 항상 코딩하자. 비토의 글은 https://medium.com/always-be-coding/abc-always-be-coding-d5f8051afce2 에서 볼수 있다.
+
+항상 코딩하고 항상 공부한다면 누구도 부럽지 않은 경력을 갖게 될 것이다.
+
+* 고전
+
+  프로그래밍 관련 책 중 반드시 읽어야 할 책 몇 권
+
+  1. 실용주의 프로그래머 (앤디 헌트, 데이브 토마스)
+  2. GoF의 디자인 패턴
+  3. Code Complete
+  4. 컴파일러: 원리, 기법, 도구
+  5. Introduction to Algorithms
+  6. Problem Solving with Data Structures and Algorithms (무료임)
+
+* 온라인 클래스
+
+  http://theselftaughtprogrammer.io/courses
+
+* 해커 뉴스
+
+  https://news.ycombinator.com 는 기술 인큐베이터 회사인 Y Combinator에서 운영하는, 사용자들이 올린 기술 관련 뉴스 사이트.
+
+  최신 트렌드와 기술
+
+### 다음 단계
+
+"그대가 배운 작은 것들을 사랑하고 그로부터 만족하라" -마르쿠스 아우렐리우스marcus aurelius-
+
+자료구조와 알고리즘.
+
+리트코드에 가서 자료구조와 알고리즘 문제를 연습하고 충분히 연습한 후 더 하자.
+
+먼저 알고리즘 연습을 끝내자
+
+* 멘토를 찾기
+
+  프로그래밍 기술을 한 단계 더 끌어올리려면 멘토가 필요할 것이다. 프로그램을 배울 때 가장 어려운 것 중 하나는, 무언가 제대로 이해하지도 못한 채 어쩌다 보니 해결되는 일이 너무 많다는 것이다.
+
+  코드 리뷰를 통해 이런 현상을 막을 수 있다.
+
+  더 제대로 코딩하도록 도와주고 책을 추천해 주며, 당신이 이해하지 못한 프로그래밍 개념을 가르쳐 줄 멘트롤 찾는다면 모든 것이 달라질 것
+
+* 더 깊이 들어가기
+
+  흔히 블랙박스라고 부르는 것. 어떻게 동작하는지 이해하지 못했지만 어쨌든 사용은 할 수 있는 것을 말하는데 프로그래밍을 처음 시작했을 때는 모든 것이 블랙박스로 보일 것이다.
+
+  블랙박스를 열어서 어떻게 동작하는지 이해하려고 애쓰는 것은 프로그래밍 기술을 늘리는 가장 좋은 방법 중 하나이다.
+
+  명령행 자체도 프로그램.
+
+  블랙박스를 여는 것이 곧 깊게 들어가는 것.
+
+  이해했다고 생각한 개념이 있었지만, 막상 설명하려고 보니 설명할 수 없다는 것을 깨닫고 더 깊이 들어간 후에야 설명할 수 있게 됨
+
+  한 가지 답을 찾았다고 멈추지 말고, 그 주제에 관해 찾을 수 있는 설명은 모두 읽어 보자. 온라인에 질문해서 달린 여러 가지 의견 전부 읽기.
+
+  직접 만들어 보는 것도 더 깊이 들어가는 방법 중 하나인데, 버전 컨트롤이 잘 이해되지 않으면 자유 시간에 간단한 버전 컨트롤 시스템을 만들어 보자. 무의미한 일처럼 보일 수도 있지만, 이런 프로젝트에 시간을 투자하는 것은 가치 있는 일이다. 고심하고 애써 본 만큼 더 깊이 이해하게 된다.
+
+* 다른 조언
+
+  더 좋은 프로그래머가 되는 법 : 프로그래밍 말고 다른 일을 하라.
+
+  다니엘 코일 <The Talent Code> 프로그래밍에 관한 책은 아니었지만 어떤 기술을 익히려 할 때 필요한 것을 정확히 짚어 주어서 도움 됨.
+
+  프로그래밍이 아닌 다른 분야에서도 프로그래밍 실력을 올릴 길을 찾을 수 있음.
+
+  다른 사람의 코드를 읽는 데 가능한 한 많은 시간을 투자하라.
+
+  다른 사람의 코드를 읽는 것은 더 나은 프로그래머가 되는 최고의 방법 중 하나.
+
+  공부할 때는 코드를 작성하는 일과 읽는 일 사이에서 균형을 잘 찾아야 한다. 처음에는 다른 사람의 코드를 읽는 일이 어렵지만, 다른 프로그래머의 코드에서 여러 가지를 배울 수 있으므로 이 작업 매우 중요.
+
+  cory@theselftuaghtprogrammer.io 메일
+
+  http://theselftaughprogrammer.io 프로그래밍 소식지
+
+  https://www.facebook.com/groups/selftaughtprogrammers 에서 페이스북 그룹도 운영하고 있으므로 필자뿐 아니라 프로그램을 공부하는 다른 사람들과도 교류할 수 있다.
+
+  
