--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/05컴포넌트통신방법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/05컴포넌트통신방법_기본.md
@@ -102,3 +102,90 @@ reactivity 가 props에도 반영
 ```
 
 component는 각각의 데이터 영역(데이터존)을 가져서 propsdata라고 동일하게 적어도 구분됨
+
+
+
+#### event emit
+
+아래에서 위로 이벤트 발생
+
+```html
+<div id="app">
+    <app-header></app-header>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    var appHeader = {
+        template: '<button>Click me</button>'
+    }
+
+    new Vue({
+        el: '#app',
+        components: {
+            'app-header': appHeader
+        }
+    });
+</script>
+```
+
+
+
+```html
+<div id="app">
+    <app-header></app-header>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    var appHeader = {
+        template: '<button v-on:click="passEvent">Click me</button>',
+        methods: {
+            passEvent: function() {
+                this.$emit('pass');
+            }
+        }
+    }
+
+    new Vue({
+        el: '#app',
+        components: {
+            'app-header': appHeader
+        }
+    });
+</script>
+```
+
+
+
+```html
+<div id="app">
+    <!-- <app-header v-on:하위 컴포넌트에서 발생한 이벤트 이름="상위 컴포넌트의 메서드"></app-header> -->
+    <app-header v-on:pass="logText"></app-header>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    var appHeader = {
+        template: '<button v-on:click="passEvent">Click me</button>',
+        methods: {
+            passEvent: function() {
+                this.$emit('pass');
+            }
+        }
+    }
+
+    new Vue({
+        el: '#app',
+        components: {
+            'app-header': appHeader
+        },
+        methods: {
+            logText: function() {
+                console.log('hi');
+            }
+        }
+    });
+</script>
+```
+
