--- a/Study/FrontEndWebDesign/01.md
+++ b/Study/FrontEndWebDesign/01.md
@@ -118,4 +118,17 @@ ul>(li>a[href="#"])*6
    </style>
    ```
 
-   
+개발자도구 - Toggle device toolbar Ctrl+Shift+M - More option - show media queries
+
+파란색 - 최대 너비(max-width) 기준으로 중단점을 나눈 쿼리문
+
+초록색 - 최소 너비와 최대 너비를 이용해 특정 점위를 기준으로 중단점을 나눈 쿼리문
+
+주황색 - 최소 너비(min-width)를 기준으로 중단점을 나눈 쿼리문
+
+마우스 포인터 올려놓고 있으면 해당 영역 미디어 쿼리 구문 표시
+
+우클 - Reveal in source code
+
+
+
