컴포넌트 소개 update

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/04컴포넌트 소개.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/04컴포넌트 소개.md
@@ -228,3 +228,7 @@ Console 가보면 app-footer Unknown
 전역컴포넌트는 인스턴스를 생성할 때 마다 따로 등록할 필요 없이 기본적으로 모든 인스턴스에 등록 되어있음
 
 지역컴포넌트는 인스턴스 생성할 때 마다 등록해줘야 뜬다
+
+
+
+서비스 실제 구현할 때 대부분은 인스턴스 하나를 붙이고 그 안에 컴포넌트를 붙여나가는 형식(지역컴포넌트)으로 진행
