--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/07라우터.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/07라우터.md
@@ -50,7 +50,7 @@ new Vue({
 
     new Vue({
         el: '#app',
-        router: router
+        router: router  // 라우터 속성: 위에서 정의한 라우터 변수
     });
 </script>
 ```
@@ -97,10 +97,12 @@ new Vue({
 
     var Router = new VueRouter({
         // 페이지의 라우팅 정보
+        // url <- 어떤 page가 뿌려질지에 대한 정보가 배열로 담김
         routes: [
+            // 페이지 개수만큼 객체의 개수가 필요
             // 로그인 페이지 정보
             {
-                // 페이지 url
+                // 페이지 url 이름
                 path: '/login',
                 // 해당 url에서 표시될 컴포넌트
                 component: LoginComponent
