데이터 바인딩과 computed 속성

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
@@ -49,3 +49,54 @@ new Vue({
 })
 ```
 
+
+
+```html
+<div id="app">
+    {{ str }}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            str: 'hi'
+        }
+    })
+</script>
+```
+
+![:)](./imgs/17.png)
+
+값을 바꿨을 때 바로 화면에 반영되어서 갱신(다시 그려짐)되는 것 -> reactivity
+
+값이 연결되는 구간 - 데이터바인딩
+
+
+
+데이터 값에 따라서 바뀌는 값을 정의할 때 computed 속성 활용
+
+```html
+<div id="app">
+    <p>{{ num }}</p>
+    <p>{{ doubleNum }}</p>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            num: 10,
+        },
+        computed: {
+            doubleNum: function() {
+                return this.num * 2;
+            }
+        }
+    })
+</script>
+```
+
+![computed](./imgs/18.png)
