뷰 디렉티브와 v-bind

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
@@ -100,3 +100,34 @@ new Vue({
 ```
 
 ![computed](./imgs/18.png)
+
+
+
+#### 뷰 디렉티브와 v-bind
+
+```html
+<div id="app">
+    <p v-binc:id="uuid" v-bind:class="">{{ num }}</p>
+    <!-- 위 내용은 실제 화면에서 아래와 같이 나타남 -->
+    <!-- <p id="abc1234">{{ num }}</p> -->
+    <p>{{ doubleNum }}</p>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            num: 10,
+            uuid: 'abc1234',
+            name: 'text-blue'
+        },
+        computed: {
+            doubleNum: function() {
+                return this.num * 2;
+            }
+        }
+    })
+</script>
+```
+
