뷰 디렉티브와 v-bind

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
@@ -107,7 +107,7 @@ new Vue({
 
 ```html
 <div id="app">
-    <p v-binc:id="uuid" v-bind:class="">{{ num }}</p>
+    <p v-bind:id="uuid" v-bind:class="">{{ num }}</p>
     <!-- 위 내용은 실제 화면에서 아래와 같이 나타남 -->
     <!-- <p id="abc1234">{{ num }}</p> -->
     <p>{{ doubleNum }}</p>
@@ -131,3 +131,12 @@ new Vue({
 </script>
 ```
 
+![19](./imgs/19.png)
+
+![20](./imgs/20.png)
+
+![21](./imgs/21.png)
+
+![22](./imgs/22.png)
+
+v-bind:id 문법 이용해서 편하게 데이터 조작해서 값 바꾸기 
