클래스 바인딩 v-if v-show

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
@@ -140,3 +140,98 @@ new Vue({
 ![22](./imgs/22.png)
 
 v-bind:id 문법 이용해서 편하게 데이터 조작해서 값 바꾸기 
+
+
+
+#### 클래스 바인딩
+
+```html
+<div id="app">
+    <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
+    <!-- 위 내용은 실제 화면에서 아래와 같이 나타남 -->
+    <!-- <p id="abc1234">{{ num }}</p> -->
+    <p>{{ doubleNum }}</p>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            num: 10,
+            uuid: 'abc1234',
+            name: 'text-blue'
+        },
+        computed: {
+            doubleNum: function() {
+                return this.num * 2;
+            }
+        }
+    })
+</script>
+```
+
+![23](./imgs/23.png)
+
+![24](./imgs/24.png)
+
+
+
+```html
+<div id="app">
+    <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
+    <!-- 위 내용은 실제 화면에서 아래와 같이 나타남 -->
+    <!-- <p id="abc1234">{{ num }}</p> -->
+    <p>{{ doubleNum }}</p>
+    <div v-if="loading">
+        Loading...
+    </div>
+    <div v-else>
+        test user has been logged in
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            num: 10,
+            uuid: 'abc1234',
+            name: 'text-blue',
+            loading: true  // 로딩 중
+        },
+        computed: {
+            doubleNum: function() {
+                return this.num * 2;
+            }
+        }
+    })
+</script>
+```
+
+![25](./imgs/25.png)
+
+![26](./imgs/26.png)
+
+```html
+<div v-if="loading">
+    Loading...
+</div>
+<div v-else>
+    test user has been logged in
+</div>
+<div v-show="loading">
+    Loading...
+</div>
+```
+
+![27](./imgs/27.png)
+
+![28](./imgs/28.png)
+
+![29](./imgs/29.png)
+
+if는 돔을 아예 제거하고
+
+show는 css style에서 "display: none;" <- 육안상으로만 안보이고 돔 정보 남아있음
