모르는 문법 공식 문서 보고 해결

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
@@ -235,3 +235,33 @@ v-bind:id 문법 이용해서 편하게 데이터 조작해서 값 바꾸기
 if는 돔을 아예 제거하고
 
 show는 css style에서 "display: none;" <- 육안상으로만 안보이고 돔 정보 남아있음
+
+
+
+#### 모르는 문법 나왔을 때 공식 문서 보고 해결하기
+
+```html
+<!-- TODO: 인풋 박스를 만들고 입력된 값을 p 태그에 출력해보세요 -->
+<input type="text">
+<p></p>
+```
+
+http://vuejs.org/
+
+![30](./imgs/30.png)
+
+![31](./imgs/31.png)
+
+![32](./imgs/32.png)
+
+![33](./imgs/33.png)
+
+```html
+<!-- TODO: 인풋 박스를 만들고 입력된 값을 p 태그에 출력해보세요 -->
+<input type="text" v-model="message">
+<p>{{ message }}</p>
+```
+
+![34](./imgs/34.png)
+
+![35](./imgs/35.png)
