methods 속성과 v-on 디렉티브를 이용한 키보드 마우스 이벤트 처리 방법

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/09템플릿문법_기본.md
@@ -265,3 +265,69 @@ http://vuejs.org/
 ![34](./imgs/34.png)
 
 ![35](./imgs/35.png)
+
+
+
+#### methods 속성과 v-on 디렉티브를 이용한 키보드, 마우스 이벤트 처리 방법
+
+```html
+<div id="app">
+    <button v-on:click="logText">click me</button>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        methods: {
+            logText: function() {
+                console.log('clicked');
+            }
+        }
+    })
+</script>
+```
+
+![36](./imgs/36.png)
+
+![37](./imgs/37.png)
+
+```html
+<div id="app">
+    <button v-on:click="logText">click me</button>
+    <input type="text" v-on:keyup="logText">
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        methods: {
+            logText: function() {
+                console.log('clicked');
+            }
+        }
+    })
+</script>
+```
+
+![38](./imgs/38.png)
+
+```html
+<input type="text" v-on:keyup.enter="logText">
+```
+
+`.enter`  <- 이벤트에 추가로 붙는게 이벤트 modifier
+
+![39](./imgs/39.png)
+
+Enter 치면 clicked 나옴
+
+```html
+<button v-on:click="logText">click me</button>
+<input type="text" v-on:keyup.enter="logText">
+<button>add</button>
+```
+
+이벤트 modifier를 이용해, 사용자가 Enter 쳤을 때 마치 add버튼에 붙여놓은 이벤트, 메서드가 실행되는 것처럼 할 수 있음
+
