--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/10템플릿문법_실전.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/10템플릿문법_실전.md
@@ -61,3 +61,48 @@ watch <- data의 변화에 따라서 특정 로직을 실행할 수 있음
 num을 바꿀 떄마다 this.logText() 실행
 
 ![41](./imgs/41.png)
+
+
+
+#### watch 속성 vs computed 속성
+
+```html
+<div id="app">
+    {{ num }}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            num: 10
+        },
+        computed: {
+            doubleNum: function() {
+                return this.num * 2;
+            }
+        },
+        watch: {
+            num: function(newValue, oldValue) {
+                this.fetchUserByNumber(newValue);
+            }
+        },
+        methods: {
+            fetchUserByNumber: function(num) {
+                console.log(num);
+                // axios.get(num);
+            }
+        }
+    });
+</script>
+```
+
+![42](./imgs/42.png)
+
+![43](./imgs/43.png)
+
+![44](./imgs/44.png)
+
+ [명령적인 `watch` 콜백보다 computed 속성을 사용하는 것이 더 좋습니다](https://kr.vuejs.org/v2/guide/computed.html)
+
