--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/12싱글파일컴포넌트.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/12싱글파일컴포넌트.md
@@ -1,3 +1,43 @@
 components 폴더 아레 HelloWorld.vue 삭제
 
 App.vue 내용 다 지우기
+
+<template> 속성 HTML element 최상위 레벨에 하나만 있어야함
+
+The template root requires exactly one element.
+
+
+
+![50](./imgs/50.png)
+
+```vue
+<template>
+  <div>
+    {{ str }}
+  </div>
+</template>
+
+<script>
+// new Vue({
+//   data: {
+//     str: 'hi'
+//   }
+// })
+
+export default {
+  data: function() {
+    return {
+      str: 'hi'
+    }
+  }
+}
+</script>
+
+<style>
+
+</style>
+```
+
+![51](./imgs/51.png)
+
+![52](./imgs/52.png)
