--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/12싱글파일컴포넌트.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/12싱글파일컴포넌트.md
@@ -41,3 +41,64 @@ export default {
 ![51](./imgs/51.png)
 
 ![52](./imgs/52.png)
+
+
+
+src > components > AppHeader.vue
+
+![53](./imgs/53.png)
+
+위와 같이 하면 HTML 표준태그인지 컴포넌트 태그인지 브라우저는 알 길이 없어서
+
+구분할 수 있도록
+
+components 이름은 최소한 두 단어 이상으로 조합(스타일가이드 권고)
+
+
+
+import 할 때 .vue 까지 붙여줘야 vscode에서 제공하는 파일 바로가기 깨지지 않고 사용 가능
+
+확장자 붙이기
+
+
+
+AppHeader.vue
+
+```vue
+<template>
+    <header>
+        <h1>Header</h1>
+    </header>
+</template>
+
+<script>
+export default {
+    
+}
+</script>
+
+<style>
+    
+</style>
+```
+
+
+
+
+
+![54](./imgs/54.png)
+
+파일에 있는 내용을 변수에 담고 연결
+
+(객체 아닌 파일로 저장)
+
+```vue
+// 객체
+var AppHeader = {
+   template: '<header><h1>Header</h1></header>'
+}
+```
+
+
+
+![55](./imgs/55.png)
