싱글 파일 컴포넌트에서 props 속성 사용하는 방법

--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/12싱글파일컴포넌트.md
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/12싱글파일컴포넌트.md
@@ -102,3 +102,17 @@ var AppHeader = {
 
 
 ![55](./imgs/55.png)
+
+
+
+![56](./imgs/56.png)
+
+![57](./imgs/57.png)
+
+App 이라는 컴포넌트에서 str이라는 데이터를 propsdata(props 속성 이름)로 내려보냄
+
+![58](./imgs/58.png)
+
+![59](./imgs/59.png)
+
+![60](./imgs/60.png)
