웹 앱 매니페스트 파일 생성 및 등록

--- a/Study/Vue_JS/PWA/03웹앱매니페스트구성.md
+++ b/Study/Vue_JS/PWA/03웹앱매니페스트구성.md
@@ -38,3 +38,15 @@ Web App Manifest 파일 구조
 }
 ```
 
+
+
+#### Web App Manifest 파일 등록
+
+* 메인 html 파일의 head에 아래와 같은 meta 태그 추가
+
+  ```html
+  <link rel="manifest" href="/manifest.json">
+  ```
+
+  
+
