웹 앱 매니페스트 시작 주소, 화면 형태

--- a/Study/Vue_JS/PWA/03웹앱매니페스트구성.md
+++ b/Study/Vue_JS/PWA/03웹앱매니페스트구성.md
@@ -111,5 +111,50 @@ Web App Manifest 파일 구조
 
   dp: 다양한 모바일 화면 크기에서 동일한 비율로 출력되게 하는 픽셀 단위
 
+3) Start URL
 
+* 앱이 시작될 때 로딩될 페이지 위치 지정
+
+  ```json
+  "start_url": "./"
+  ```
+
+* GA 분석이나 기타 목적으로 query string을 뒤에 붙일 수 있다
+
+  ```json
+  "start_url": "index.html?launcher=homescreen"
+  ```
+
+4) Display Type
+
+* 웹앱 화면의 전체적인 모양을 정할 수 있다
+
+* 웹앱이 모바일 앱의 느낌을 가져갈 수 있도록 결정짓는 속성
+
+  * browser
+  * standalone
+  * fullscreen
+
+  ```json
+  "display": "standalone"
+  ```
+
+  * `display` 속성의 옵션 값은 아래와 같다
+
+    * `standalone` : 상단 URL 바 제거하여 네이티브 앱 느낌 제공
+    * `browser` : 해당 OS 브라우저에서 웹앱 실행
+    * `fullscreen` : 크롬이 아닌 기타 브라우저에서 네이티브 앱 느낌 제공
+    * `minimul-ui` : fullscreen과 비슷하나 네비게이션 관련 최소 UI를 제공
+
+    주의사항: IOS에서 standalone 사용시
+
+    * `<a>`를 이용한 네비게이션 이동 시 새 브라우저 열기로 인해 context 잃게 됨
+
+    * 따라서, location.href 또는 SPA를 이용한 네비게이팅으로 전체 UX를 가져갈 필요가 있음
+
+      ```html
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      ```
+
+      
 
